--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -23,4 +23,4 @@ spec:
         - containerPort: 3000
         env:
         - name: APP_ENV
-          value: {{ .Values.environment }}
+          value: {{ .Values.enviroment }}
