--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,13 +2,15 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: 
+    branches:
       - dev
       - main
 
 jobs:
-  build-and-push:
+  build-and-push-dev:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/dev'
+    environment: dev
     steps:
       - name: Check out the code
         uses: actions/checkout@v2
@@ -18,23 +20,31 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
 
       - name: Build and push Docker image for dev
-        if: github.ref == 'refs/heads/dev'
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: bryan292/devops-assignment-app:dev
-        environment:
-          name: dev
 
-      - name: Build and push Docker images for production
-        if: github.ref == 'refs/heads/main'
+  build-and-push-prod:
+    needs: build-and-push-dev
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    environment: prod
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
+      
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image for prod
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -43,5 +53,3 @@ jobs:
           tags: |
             bryan292/devops-assignment-app:prod
             bryan292/devops-assignment-app:latest
-        environment:
-          name: prod
