--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -52,3 +52,39 @@ jobs:
           tags: |
             bryan292/devops-assignment-app:prod
             bryan292/devops-assignment-app:latest
+
+  deploy-infra:
+    needs: build-and-push-dev
+    runs-on: ubuntu-latest
+    if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
+    needs: [build-and-push-dev, build-and-push-prod]
+    steps:    
+      - name: Checkout Infra Repository
+        uses: actions/checkout@v2
+        with:
+          repository: 'bryan292/multi-cloud-k8s-iac' # Replace with your actual Repo A details
+          path: 'multi-cloud-k8s-iac' # Checks outrepository into a directory named 'multi-cloud-k8s-iac'
+      
+      - name: Install Terragrunt
+        run: |
+          TERRAGRUNT_VERSION="0.54.16" # Specify the desired Terragrunt version
+          wget https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64
+          chmod +x terragrunt_linux_amd64
+          sudo mv terragrunt_linux_amd64 /usr/local/bin/terragrunt
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.1.5 # Specify Terraform version
+      
+      - name: Deploy with Terragrunt
+        run: |
+          pwd
+          ls -ltrha
+          cd multi-cloud-k8s-iac/env
+          cp ../../config.yaml .
+          terragrunt run-all apply --terragrunt-non-interactive
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ vars.AWS_DEFAULT_REGION }}
