--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,9 @@ global:
   branch: dev
   app_repo: https://github.com/bryan292/devops-assignment
 
+umbrella:
+  cluster_autoscaler: false
+
 network:
   vpc_cidr: "10.0.0.0/16" 
   domain: 292s.io
